# lambda-shell

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  cmake_install.cmake  main  shell  your_program.sh
src/: main.c  tests.c
src/utils/: utils.h
